# wei

./: .gitignore  CODEOWNERS  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example
crates/agent/: Cargo.toml  Dockerfile
crates/agent/.sqlx/: query-0603de7e1d0e7f33cb5a185b6fca84b2349de20959a3e33f2cd27c88c0abde75.json  query-1427beecc0ef03eadaa8c1adcbd03fe5fde7dc37f3590d545cd414f093716fe6.json  query-1f7c00a39f7df795152e9fecfab9e74ecb51edb78225aac5ffb0f1602cf99314.json  query-24a743172c3d2b1441fda79c2255d9a1ecf4fbc4badbd774d48c541d01f0b2ba.json  query-2e43096a2f038bd22574f205044d81209abeb285403d02f8cc38924d5b5ef4fc.json  query-3297982d0ee64a442ab85d22decc8ed728fb42adabd1cc1fd404c8ab2fd2f3b3.json  query-379951eca48a8a1b121061f82d2bddec275bd2ec224b1a3913a8d74950a61b56.json  query-413927169173a295f0456b2f9f5464646289582d887fbe328cc593c90461c305.json  query-44f808b7e86cced87e2bcd8c3f7bbfaa270fa1489b214bd4319c725f3caf77c2.json  query-56858ff3a8ecb555be5e4004389f741cd6c900c70fdce6d80f0e8d5b201162b5.json  query-5b86b0a2bfe50c64f6f094dc2ab460c062d054b9fba71ec93d0a9381a7a357f0.json  query-69017500ea7695640835cb689f953cba126284bed2659f86ce34103aa03db06f.json  query-768725c70875076ebe7b23f4a4c7323696b16a0e65a8adcaba5e7a9a6e2fea02.json  query-7c2eb0829559b22b44de5bb724d98eaba724a49d3751a10122f6ed869504cc42.json  query-a3ca06f9bccee39d1f67eaf88a6b3dc7ebf3a7c7cd86d6c6b699c7d175640081.json  query-b319ff21f7802139084a490692eb3c85e5341c6e0c7686fb21e46bbb8396caca.json  query-dab7baedc5d9716d918f00ce01ae52c7557fda0d193c32174d73261aa2b0fa0e.json  query-dbd79f1d05147d970867654f86478af4430e6d8063d197168a832d35055572e9.json  query-e6add6671ee6b0aacb52e953f867214b53b002015c7e8d9d0f7ddb7fdf0b09af.json  query-eb94a203b7c7be6dfaa8ce45db002d504f2ae4eb837269c64c6071756e48fcb3.json  query-fef22ebfb6b3e4f60ae636deacbfec8a33f10ab681e220829ae39db7d9904628.json
crates/agent/assets/: swagger-ui.html
crates/agent/migrations/: 001_initial_schema.sql  002_community_analysis.sql  003_generic_cache.sql  004_users_auth_with_username.sql
crates/agent/src/: errors.rs  lib.rs  main.rs
crates/agent/tests/: api_key_auth_tests.rs  auth_test.rs  custom_evaluation_test.rs  e2e_custom_evaluation_test.rs  mod.rs  (+5 more)
(+165 files in other folders)
