[workspace]
members = ["crates/indexer", "crates/agent"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wei Team"]
description = "DAO/Governance proposal indexing and AI agent system"
license = "MIT"
repository = "https://github.com/wei/wei"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
graphql_client = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
clap = { version = "4.5", features = ["env","derive"] }
openrouter-rs = "0.4.5"

[workspace.metadata]
# Workspace metadata for documentation and tooling 