[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AI agent for analyzing DAO/Governance proposals"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
dotenv.workspace = true
openrouter-rs.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
jsonwebtoken.workspace = true

# Additional dependencies specific to agent
async-trait = "0.1"
futures = "0.3"
url = "2.4"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 